# recursion-api-call

./: .env.example  Cargo.toml  README.md
src/: api_schema.rs  main.rs  request_api.rs
