[package]
name = "recursion-api-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"]}
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
async-recursion = "1.0.0"
dotenv = "0.15.0"
envy = "0.4"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0"